# vindicate-app

./: .auto-claude-status  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.auto-claude/specs/001-check-todo-folder-and-create-tasks/: build-progress.txt  complexity_assessment.json  context.json  graph_hints.json  implementation_plan.json  project_index.json  qa_report.md  requirements.json  spec.md  task_logs.json
.auto-claude/specs/001-check-todo-folder-and-create-tasks/memory/: attempt_history.json  build_commits.json
.claude/: AGENTS.md
.claude/agents/: compliance.md  docs.md  marketing.md  orchestrator.md  performance.md  security.md  tester.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: agent-dispatch.yml  ci.yml
_archive/vindicate_core/: __init__.py  calculator.py
docs/marketing/tweets/: template.json
docs/marketing/youtube/: longform-template.md  short-template.md
docs/todo/: vindicate-tasks.md
