[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vindicate-workspace"
version = "0.1.0"
description = "Vindicate NYC - AI-powered debt advocacy platform"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0"
keywords = ["debt", "legal-tech", "financial-recovery", "433-a", "agents"]
authors = [
  { name = "Vindicate NYC LLC" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "black>=23.12.0",
  "ruff>=0.1.8",
  "mypy>=1.7.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
]

# Workspace configuration for editable installs
[tool.hatch.envs.default]
dependencies = [
  "vindicate-core @ {root:uri}/packages/core",
  "vindicate-agents @ {root:uri}/packages/agents",
]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/agents/tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
